[project]
name = "stackcoin-python"
version = "0.1.0"
description = "Python client for interacting with the StackCoin HTTP API"
readme = "README.md"
authors = [{ name = "Jack Arthur Harrhy", email = "me@jackharrhy.com" }]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
