[project]
name = "stackcoin"
version = "0.1.0"
description = "Python library for the StackCoin API"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stackcoin"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "I", "UP"]
